--- a/site/src/index.css
+++ b/site/src/index.css
@@ -22,7 +22,7 @@ ul {
 
 a {
   text-decoration: none;
-  color: #333;
+   color: #333;
 }
 
 .container {
@@ -76,8 +76,18 @@ p {
   cursor: pointer;
 }
 
+.btn a {
+  color: #fff;
+}
+
 .btn:hover {
-  box-shadow: rgb(0 0 0 / 15%) 0px 8px 24px;
+  box-shadow: rgb(0 0 0 / 25%) 0px 8px 24px;
+
+}
+.btn:active  {
+
+  color: black;
+
 }
 
 input {
@@ -86,14 +96,16 @@ input {
   background: transparent;
   border-radius: 24px 4px;
   font-size: 1rem;
-  margin-right: .8rem;
+  /* margin-right: .8rem; */
+  margin-bottom: 40px;
   font-family: 'Poppins', sans-serif;
+  margin-left: 10px;
 }
 
 
 @media screen and (max-width:768px) {
   h1 {
-    font-size: 2.1rem;
+    font-size: 1.7rem;
     line-height: 1.2;
   }
   
@@ -112,7 +124,7 @@ input {
   }
 
   .btn {
-    width: 100%;
+    width: 80%;
     margin: 1rem 0;
   }
 
