--- a/site/src/styles/Featured.css
+++ b/site/src/styles/Featured.css
@@ -146,6 +146,9 @@
     color: #ff0000;
 }
 
+input { 
+    margin-right: 0.8rem;
+}
 @media screen and (max-width: 940px) {
     .featured .container {
         grid-template-columns: 1fr;
