--- a/site/src/styles/Footer.css
+++ b/site/src/styles/Footer.css
@@ -39,15 +39,17 @@
 @media screen and (max-width: 940px) {
   .footer .container {
       grid-template-columns: repeat(2,1fr);
+      text-align: center;
   }
 
   .footer .col-1 {
       display: none;
   }
+.footer .bar {
+  display: none;
+}
+.footer h5{
+  margin: 1rem 0;
+}
 
-  /* @media screen and (max-width:478px) {
-      .footer .container {
-          grid-template-columns: 1fr;
-      }
-  } */
 }
