--- a/site/src/styles/Page.css
+++ b/site/src/styles/Page.css
@@ -98,6 +98,7 @@ table th {
     border-radius: 24px ;
     cursor: pointer;
 margin-right: 20px;
+width: 100px;
   
 }
 
@@ -108,6 +109,8 @@ margin-right: 20px;
     border-radius: 24px ;
     cursor: pointer;
 margin-right: 20px;
+width: 100px;
+margin-top: 20px;
   
 }
 
@@ -115,6 +118,8 @@ margin-right: 20px;
   color: #fff;
   font-size: 14px;
   font-weight: bold;
+  width: 100px;
+
 }
 
 
@@ -137,12 +142,14 @@ margin-right: 20px;
   table thead {
     display: none;
   }
-  table td {
+  /* table td {
     display: flex;
     justify-content: space-between;
-  }
+  } */
   table td {
     display: block;
+    text-align: center;
+    
   }
   table td:first-of-type {
     font-weight: bold;
@@ -155,18 +162,26 @@ margin-right: 20px;
     display: block;
     font-weight: bold;
   }
+
+  table thead tr:first-child th, table tbody tr:first-child td {
+    border-top-width: 2px;
+}
+table thead tr th:first-child, table tbody tr td:first-child {
+  border-left-width: 1px;
+}
+.botao-vender, .botao-comprar {
+margin-top:20px ;
+margin-left: 80px;
+
+  
 }
 
-@media screen and (max-width: 736px) {
-  .table-container {
-    padding: 1em 1em 0.1em 1em;
-  }
+.icones_banco{
+  margin-left: 110px;
 
-  h1 {
-    font-size: 2em;
-  }
 }
 
+}
 
 
 
@@ -176,4 +191,12 @@ margin-right: 20px;
       margin: 1rem 0;
       display: grid;
   }
+  table thead {
+    display: none;
+  }
+  .botao-vender, .botao-comprar {
+    margin-top:20px ;
+   width: 100px;
+      
+    }
 }
